Assignment2/lab_2/Programs/parser.output
Terminals unused in grammar

   ERROR
   ATTRIBUTE
   VARYING
   NOPERSPECTIVE
   LOWP
   MEDIUMP
   HIGHP
   ILLUMINANCE
   AMBIENT
   SCRATCH


State 367 conflicts: 1 shift/reduce


Grammar

    0 $accept: class_identifier $end

    1 class_identifier: state_definition translation_unit
    2                 | state_definition

    3 state_variable: RT_PRIMITIVE
    4               | RT_CAMERA
    5               | RT_MATERIAL
    6               | RT_TEXTURE
    7               | RT_LIGHT

    8 $@1: %empty

    9 $@2: %empty

   10 state_definition: CLASS $@1 variable_identifier $@2 ':' state_variable ';'

   11 variable_identifier: IDENTIFIER

   12 state_var_identifier: STATE

   13 primary_expression: variable_identifier
   14                   | state_var_identifier
   15                   | INT
   16                   | FLOAT
   17                   | BOOL
   18                   | '(' expression ')'

   19 postfix_expression: primary_expression
   20                   | postfix_expression '(' expression ')'
   21                   | function_call
   22                   | postfix_expression '.' IDENTIFIER
   23                   | postfix_expression INC_OP
   24                   | postfix_expression DEC_OP

   25 function_call: function_call_or_method

   26 function_call_or_method: function_call_generic

   27 function_call_generic: function_call_header_with_parameters ')'
   28                      | function_call_header_no_parameters ')'

   29 function_call_header_no_parameters: function_call_header

   30 function_call_header_with_parameters: function_call_header assignment_expression
   31                                     | function_call_header_with_parameters ',' assignment_expression

   32 function_call_header: function_identifier '('

   33 function_identifier: type_specifier

   34 unary_expression: postfix_expression
   35                 | INC_OP unary_expression
   36                 | DEC_OP unary_expression
   37                 | unary_operator unary_expression

   38 unary_operator: '+'
   39               | '-'
   40               | '!'
   41               | '~'

   42 multiplicative_expression: unary_expression
   43                          | multiplicative_expression '*' unary_expression
   44                          | multiplicative_expression '/' unary_expression
   45                          | multiplicative_expression '%' unary_expression

   46 additive_expression: multiplicative_expression
   47                    | additive_expression '+' multiplicative_expression
   48                    | additive_expression '-' multiplicative_expression

   49 shift_expression: additive_expression
   50                 | shift_expression LEFT_OP additive_expression
   51                 | shift_expression RIGHT_OP additive_expression

   52 relational_expression: shift_expression
   53                      | relational_expression '<' shift_expression
   54                      | relational_expression '>' shift_expression
   55                      | relational_expression LE_OP shift_expression
   56                      | relational_expression GE_OP shift_expression

   57 equality_expression: relational_expression
   58                    | equality_expression EQ_OP relational_expression
   59                    | equality_expression NE_OP relational_expression

   60 and_expression: equality_expression
   61               | and_expression '&' equality_expression

   62 exclusive_or_expression: and_expression
   63                        | exclusive_or_expression '^' and_expression

   64 inclusive_or_expression: exclusive_or_expression
   65                        | inclusive_or_expression '|' exclusive_or_expression

   66 logical_and_expression: inclusive_or_expression
   67                       | logical_and_expression AND_OP inclusive_or_expression

   68 logical_xor_expression: logical_and_expression
   69                       | logical_xor_expression XOR_OP logical_and_expression

   70 logical_or_expression: logical_xor_expression
   71                      | logical_or_expression OR_OP logical_xor_expression

   72 conditional_expression: logical_or_expression
   73                       | logical_or_expression '?' expression ':' assignment_expression

   74 assignment_expression: conditional_expression
   75                      | unary_expression assignment_operator assignment_expression

   76 assignment_operator: '='
   77                    | MUL_ASSIGN
   78                    | DIV_ASSIGN
   79                    | MOD_ASSIGN
   80                    | ADD_ASSIGN
   81                    | SUB_ASSIGN
   82                    | LEFT_ASSIGN
   83                    | RIGHT_ASSIGN
   84                    | AND_ASSIGN
   85                    | XOR_ASSIGN
   86                    | OR_ASSIGN

   87 expression: assignment_expression
   88           | expression ',' assignment_expression

   89 constant_expression: conditional_expression

   90 declaration: function_prototype '{' expression '}'
   91            | init_declarator_list ';'
   92            | PRECISION PRECISION type_specifier ';'
   93            | type_qualifier IDENTIFIER '{' struct_declaration_list '}' ';'
   94            | type_qualifier IDENTIFIER '{' struct_declaration_list '}' IDENTIFIER ';'
   95            | type_qualifier IDENTIFIER '{' struct_declaration_list '}' IDENTIFIER array_specifier ';'
   96            | type_qualifier ';'
   97            | type_qualifier IDENTIFIER ';'
   98            | type_qualifier IDENTIFIER identifier_list ';'

   99 identifier_list: ',' IDENTIFIER
  100                | identifier_list ',' IDENTIFIER

  101 function_prototype: function_declarator

  102 function_declarator: function_header
  103                    | function_header_with_parameters
  104                    | function_header_with_no_parameters

  105 function_header_with_parameters: function_header parameter_declaration
  106                                | function_header_with_parameters parameter_declaration

  107 function_header_with_no_parameters: function_header ')'

  108 $@3: %empty

  109 function_header: fully_specified_type variable_identifier $@3 '('

  110 parameter_declarator: type_specifier IDENTIFIER ')'
  111                     | type_specifier IDENTIFIER ','
  112                     | type_specifier IDENTIFIER array_specifier ')'
  113                     | type_specifier IDENTIFIER array_specifier ','

  114 parameter_declaration: type_qualifier parameter_declarator
  115                      | parameter_declarator
  116                      | type_qualifier parameter_type_specifier
  117                      | parameter_type_specifier

  118 parameter_type_specifier: type_specifier

  119 init_declarator_list: single_declaration
  120                     | init_declarator_list ',' IDENTIFIER
  121                     | init_declarator_list ',' IDENTIFIER array_specifier
  122                     | init_declarator_list ',' IDENTIFIER array_specifier '=' initializer
  123                     | init_declarator_list ',' IDENTIFIER '=' initializer

  124 single_declaration: fully_specified_type
  125                   | fully_specified_type variable_identifier
  126                   | fully_specified_type IDENTIFIER array_specifier
  127                   | fully_specified_type IDENTIFIER array_specifier '=' initializer

  128 $@4: %empty

  129 single_declaration: fully_specified_type variable_identifier $@4 '=' initializer

  130 fully_specified_type: type_specifier
  131                     | type_qualifier type_specifier

  132 invariant_qualifier: INVARIANT

  133 interpolation_qualifier: SMOOTH
  134                        | FLAT

  135 layout_qualifier: LAYOUT '(' layout_qualifier_id_list ')'

  136 layout_qualifier_id_list: layout_qualifier_id
  137                         | layout_qualifier_id_list ',' layout_qualifier_id

  138 layout_qualifier_id: IDENTIFIER IDENTIFIER '=' constant_expression
  139                    | SHARED

  140 precise_qualifier: PRECISE

  141 type_qualifier: single_type_qualifier
  142               | type_qualifier single_type_qualifier

  143 single_type_qualifier: storage_qualifier
  144                      | layout_qualifier
  145                      | interpolation_qualifier
  146                      | invariant_qualifier
  147                      | precise_qualifier
  148                      | access_modifiers

  149 storage_qualifier: CONST
  150                  | INOUT
  151                  | IN
  152                  | OUT
  153                  | CENTROID
  154                  | PATCH
  155                  | SAMPLE
  156                  | UNIFORM
  157                  | BUFFER
  158                  | SHARED
  159                  | COHERENT
  160                  | VOLATILE
  161                  | RESTRICT
  162                  | READONLY
  163                  | WRITEONLY
  164                  | SUBROUTINE
  165                  | SUBROUTINE '(' type_name_list ')'

  166 type_name_list: type_identifier
  167               | type_name_list ',' type_identifier

  168 type_specifier: type_specifier_nonarray
  169               | type_specifier_nonarray array_specifier

  170 array_specifier: '[' ']'
  171                | '[' constant_expression ']'
  172                | array_specifier '[' ']'
  173                | array_specifier '[' constant_expression ']'

  174 type_identifier: TYPE

  175 type_specifier_nonarray: struct_specifier
  176                        | type_identifier

  177 access_modifiers: PUBLIC
  178                 | PRIVATE

  179 struct_specifier: STRUCT IDENTIFIER '{' struct_declaration_list '}'
  180                 | STRUCT '{' struct_declaration_list '}'

  181 struct_declaration_list: struct_declaration
  182                        | struct_declaration_list struct_declaration

  183 struct_declaration: type_specifier struct_declarator_list ';'
  184                   | type_qualifier type_specifier struct_declarator_list ';'

  185 struct_declarator_list: struct_declarator
  186                       | struct_declarator_list ',' struct_declarator

  187 struct_declarator: IDENTIFIER
  188                  | IDENTIFIER array_specifier

  189 initializer: assignment_expression
  190            | '{' initializer_list '}'
  191            | '{' initializer_list ',' '}'

  192 initializer_list: initializer
  193                 | initializer_list ',' initializer

  194 declaration_statement: declaration

  195 statement: compound_statement
  196          | simple_statement

  197 simple_statement: declaration_statement
  198                 | expression_statement
  199                 | selection_statement
  200                 | switch_statement
  201                 | case_label
  202                 | iteration_statement
  203                 | jump_statement

  204 compound_statement: '{' '}'
  205                   | '{' statement_list '}'

  206 statement_no_new_scope: compound_statement
  207                       | simple_statement

  208 compound_statement_no_new_scope: '{' '}'
  209                                | '{' statement_list '}'

  210 statement_list: statement
  211               | statement_list statement

  212 expression_statement: ';'
  213                     | expression ';'

  214 selection_statement: IF '(' expression ')' selection_rest_statement

  215 selection_rest_statement: statement
  216                         | statement ELSE statement

  217 condition: expression
  218          | fully_specified_type IDENTIFIER '=' initializer

  219 switch_statement: SWITCH '(' expression ')' '{' switch_statement_list '}'

  220 switch_statement_list: %empty
  221                      | statement_list

  222 case_label: CASE expression ':'
  223           | DEFAULT ':'

  224 iteration_statement: WHILE '(' condition ')' statement_no_new_scope
  225                    | DO statement WHILE '(' expression ')' ';'
  226                    | FOR '(' for_init_statement for_rest_statement ')' statement_no_new_scope

  227 for_init_statement: expression_statement
  228                   | declaration_statement

  229 conditionopt: condition
  230             | %empty

  231 for_rest_statement: conditionopt ';'
  232                   | conditionopt ';' expression

  233 jump_statement: CONTINUE ';'
  234               | BREAK ';'
  235               | RETURN ';'

  236 $@5: %empty

  237 jump_statement: RETURN $@5 expression ';'
  238               | DISCARD ';'

  239 translation_unit: external_declaration
  240                 | translation_unit external_declaration

  241 external_declaration: function_definition
  242                     | declaration

  243 function_definition: function_prototype compound_statement_no_new_scope


Terminals, with rules where they appear

$end (0) 0
'!' (33) 40
'%' (37) 45
'&' (38) 61
'(' (40) 18 20 32 109 135 165 214 219 224 225 226
')' (41) 18 20 27 28 107 110 112 135 165 214 219 224 225 226
'*' (42) 43
'+' (43) 38 47
',' (44) 31 88 99 100 111 113 120 121 122 123 137 167 186 191 193
'-' (45) 39 48
'.' (46) 22
'/' (47) 44
':' (58) 10 73 222 223
';' (59) 10 91 92 93 94 95 96 97 98 183 184 212 213 225 231 232 233
    234 235 237 238
'<' (60) 53
'=' (61) 76 122 123 127 129 138 218
'>' (62) 54
'?' (63) 73
'[' (91) 170 171 172 173
']' (93) 170 171 172 173
'^' (94) 63
'{' (123) 90 93 94 95 179 180 190 191 204 205 208 209 219
'|' (124) 65
'}' (125) 90 93 94 95 179 180 190 191 204 205 208 209 219
'~' (126) 41
error (256)
BOOL (258) 17
INT (259) 15
FLOAT (260) 16
TYPE (261) 174
STATE (262) 12
IDENTIFIER (263) 11 22 93 94 95 97 98 99 100 110 111 112 113 120 121
    122 123 126 127 138 179 187 188 218
ERROR (264)
BREAK (265) 234
CONTINUE (266) 233
DO (267) 225
FOR (268) 226
WHILE (269) 224 225
SWITCH (270) 219
CASE (271) 222
DEFAULT (272) 223
IF (273) 214
ELSE (274) 216
RETURN (275) 235 237
STRUCT (276) 179 180
ATTRIBUTE (277)
CONST (278) 149
UNIFORM (279) 156
VARYING (280)
BUFFER (281) 157
SHARED (282) 139 158
COHERENT (283) 159
VOLATILE (284) 160
RESTRICT (285) 161
READONLY (286) 162
WRITEONLY (287) 163
LAYOUT (288) 135
CENTROID (289) 153
FLAT (290) 134
SMOOTH (291) 133
NOPERSPECTIVE (292)
PATCH (293) 154
SAMPLE (294) 155
SUBROUTINE (295) 164 165
IN (296) 151
OUT (297) 152
INOUT (298) 150
INVARIANT (299) 132
PRECISE (300) 140
DISCARD (301) 238
LOWP (302)
MEDIUMP (303)
HIGHP (304)
PRECISION (305) 92
CLASS (306) 10
ILLUMINANCE (307)
AMBIENT (308)
PUBLIC (309) 177
PRIVATE (310) 178
SCRATCH (311)
RT_PRIMITIVE (312) 3
RT_CAMERA (313) 4
RT_MATERIAL (314) 5
RT_TEXTURE (315) 6
RT_LIGHT (316) 7
LEFT_OP (317) 50
RIGHT_OP (318) 51
INC_OP (319) 23 35
DEC_OP (320) 24 36
LE_OP (321) 55
GE_OP (322) 56
EQ_OP (323) 58
NE_OP (324) 59
AND_OP (325) 67
OR_OP (326) 71
XOR_OP (327) 69
MUL_ASSIGN (328) 77
DIV_ASSIGN (329) 78
ADD_ASSIGN (330) 80
MOD_ASSIGN (331) 79
LEFT_ASSIGN (332) 82
RIGHT_ASSIGN (333) 83
AND_ASSIGN (334) 84
XOR_ASSIGN (335) 85
OR_ASSIGN (336) 86
SUB_ASSIGN (337) 81


Nonterminals, with rules where they appear

$accept (107)
    on left: 0
class_identifier (108)
    on left: 1 2, on right: 0
state_variable (109)
    on left: 3 4 5 6 7, on right: 10
state_definition (110)
    on left: 10, on right: 1 2
$@1 (111)
    on left: 8, on right: 10
$@2 (112)
    on left: 9, on right: 10
variable_identifier (113)
    on left: 11, on right: 10 13 109 125 129
state_var_identifier (114)
    on left: 12, on right: 14
primary_expression (115)
    on left: 13 14 15 16 17 18, on right: 19
postfix_expression (116)
    on left: 19 20 21 22 23 24, on right: 20 22 23 24 34
function_call (117)
    on left: 25, on right: 21
function_call_or_method (118)
    on left: 26, on right: 25
function_call_generic (119)
    on left: 27 28, on right: 26
function_call_header_no_parameters (120)
    on left: 29, on right: 28
function_call_header_with_parameters (121)
    on left: 30 31, on right: 27 31
function_call_header (122)
    on left: 32, on right: 29 30
function_identifier (123)
    on left: 33, on right: 32
unary_expression (124)
    on left: 34 35 36 37, on right: 35 36 37 42 43 44 45 75
unary_operator (125)
    on left: 38 39 40 41, on right: 37
multiplicative_expression (126)
    on left: 42 43 44 45, on right: 43 44 45 46 47 48
additive_expression (127)
    on left: 46 47 48, on right: 47 48 49 50 51
shift_expression (128)
    on left: 49 50 51, on right: 50 51 52 53 54 55 56
relational_expression (129)
    on left: 52 53 54 55 56, on right: 53 54 55 56 57 58 59
equality_expression (130)
    on left: 57 58 59, on right: 58 59 60 61
and_expression (131)
    on left: 60 61, on right: 61 62 63
exclusive_or_expression (132)
    on left: 62 63, on right: 63 64 65
inclusive_or_expression (133)
    on left: 64 65, on right: 65 66 67
logical_and_expression (134)
    on left: 66 67, on right: 67 68 69
logical_xor_expression (135)
    on left: 68 69, on right: 69 70 71
logical_or_expression (136)
    on left: 70 71, on right: 71 72 73
conditional_expression (137)
    on left: 72 73, on right: 74 89
assignment_expression (138)
    on left: 74 75, on right: 30 31 73 75 87 88 189
assignment_operator (139)
    on left: 76 77 78 79 80 81 82 83 84 85 86, on right: 75
expression (140)
    on left: 87 88, on right: 18 20 73 88 90 213 214 217 219 222 225
    232 237
constant_expression (141)
    on left: 89, on right: 138 171 173
declaration (142)
    on left: 90 91 92 93 94 95 96 97 98, on right: 194 242
identifier_list (143)
    on left: 99 100, on right: 98 100
function_prototype (144)
    on left: 101, on right: 90 243
function_declarator (145)
    on left: 102 103 104, on right: 101
function_header_with_parameters (146)
    on left: 105 106, on right: 103 106
function_header_with_no_parameters (147)
    on left: 107, on right: 104
function_header (148)
    on left: 109, on right: 102 105 107
$@3 (149)
    on left: 108, on right: 109
parameter_declarator (150)
    on left: 110 111 112 113, on right: 114 115
parameter_declaration (151)
    on left: 114 115 116 117, on right: 105 106
parameter_type_specifier (152)
    on left: 118, on right: 116 117
init_declarator_list (153)
    on left: 119 120 121 122 123, on right: 91 120 121 122 123
single_declaration (154)
    on left: 124 125 126 127 129, on right: 119
$@4 (155)
    on left: 128, on right: 129
fully_specified_type (156)
    on left: 130 131, on right: 109 124 125 126 127 129 218
invariant_qualifier (157)
    on left: 132, on right: 146
interpolation_qualifier (158)
    on left: 133 134, on right: 145
layout_qualifier (159)
    on left: 135, on right: 144
layout_qualifier_id_list (160)
    on left: 136 137, on right: 135 137
layout_qualifier_id (161)
    on left: 138 139, on right: 136 137
precise_qualifier (162)
    on left: 140, on right: 147
type_qualifier (163)
    on left: 141 142, on right: 93 94 95 96 97 98 114 116 131 142 184
single_type_qualifier (164)
    on left: 143 144 145 146 147 148, on right: 141 142
storage_qualifier (165)
    on left: 149 150 151 152 153 154 155 156 157 158 159 160 161 162
    163 164 165, on right: 143
type_name_list (166)
    on left: 166 167, on right: 165 167
type_specifier (167)
    on left: 168 169, on right: 33 92 110 111 112 113 118 130 131 183
    184
array_specifier (168)
    on left: 170 171 172 173, on right: 95 112 113 121 122 126 127
    169 172 173 188
type_identifier (169)
    on left: 174, on right: 166 167 176
type_specifier_nonarray (170)
    on left: 175 176, on right: 168 169
access_modifiers (171)
    on left: 177 178, on right: 148
struct_specifier (172)
    on left: 179 180, on right: 175
struct_declaration_list (173)
    on left: 181 182, on right: 93 94 95 179 180 182
struct_declaration (174)
    on left: 183 184, on right: 181 182
struct_declarator_list (175)
    on left: 185 186, on right: 183 184 186
struct_declarator (176)
    on left: 187 188, on right: 185 186
initializer (177)
    on left: 189 190 191, on right: 122 123 127 129 192 193 218
initializer_list (178)
    on left: 192 193, on right: 190 191 193
declaration_statement (179)
    on left: 194, on right: 197 228
statement (180)
    on left: 195 196, on right: 210 211 215 216 225
simple_statement (181)
    on left: 197 198 199 200 201 202 203, on right: 196 207
compound_statement (182)
    on left: 204 205, on right: 195 206
statement_no_new_scope (183)
    on left: 206 207, on right: 224 226
compound_statement_no_new_scope (184)
    on left: 208 209, on right: 243
statement_list (185)
    on left: 210 211, on right: 205 209 211 221
expression_statement (186)
    on left: 212 213, on right: 198 227
selection_statement (187)
    on left: 214, on right: 199
selection_rest_statement (188)
    on left: 215 216, on right: 214
condition (189)
    on left: 217 218, on right: 224 229
switch_statement (190)
    on left: 219, on right: 200
switch_statement_list (191)
    on left: 220 221, on right: 219
case_label (192)
    on left: 222 223, on right: 201
iteration_statement (193)
    on left: 224 225 226, on right: 202
for_init_statement (194)
    on left: 227 228, on right: 226
conditionopt (195)
    on left: 229 230, on right: 231 232
for_rest_statement (196)
    on left: 231 232, on right: 226
jump_statement (197)
    on left: 233 234 235 237 238, on right: 203
$@5 (198)
    on left: 236, on right: 237
translation_unit (199)
    on left: 239 240, on right: 1 240
external_declaration (200)
    on left: 241 242, on right: 239 240
function_definition (201)
    on left: 243, on right: 241


State 0

    0 $accept: . class_identifier $end

    CLASS  shift, and go to state 1

    class_identifier  go to state 2
    state_definition  go to state 3


State 1

   10 state_definition: CLASS . $@1 variable_identifier $@2 ':' state_variable ';'

    $default  reduce using rule 8 ($@1)

    $@1  go to state 4


State 2

    0 $accept: class_identifier . $end

    $end  shift, and go to state 5


State 3

    1 class_identifier: state_definition . translation_unit
    2                 | state_definition .

    TYPE        shift, and go to state 6
    STRUCT      shift, and go to state 7
    CONST       shift, and go to state 8
    UNIFORM     shift, and go to state 9
    BUFFER      shift, and go to state 10
    SHARED      shift, and go to state 11
    COHERENT    shift, and go to state 12
    VOLATILE    shift, and go to state 13
    RESTRICT    shift, and go to state 14
    READONLY    shift, and go to state 15
    WRITEONLY   shift, and go to state 16
    LAYOUT      shift, and go to state 17
    CENTROID    shift, and go to state 18
    FLAT        shift, and go to state 19
    SMOOTH      shift, and go to state 20
    PATCH       shift, and go to state 21
    SAMPLE      shift, and go to state 22
    SUBROUTINE  shift, and go to state 23
    IN          shift, and go to state 24
    OUT         shift, and go to state 25
    INOUT       shift, and go to state 26
    INVARIANT   shift, and go to state 27
    PRECISE     shift, and go to state 28
    PRECISION   shift, and go to state 29
    PUBLIC      shift, and go to state 30
    PRIVATE     shift, and go to state 31

    $default  reduce using rule 2 (class_identifier)

    declaration                         go to state 32
    function_prototype                  go to state 33
    function_declarator                 go to state 34
    function_header_with_parameters     go to state 35
    function_header_with_no_parameters  go to state 36
    function_header                     go to state 37
    init_declarator_list                go to state 38
    single_declaration                  go to state 39
    fully_specified_type                go to state 40
    invariant_qualifier                 go to state 41
    interpolation_qualifier             go to state 42
    layout_qualifier                    go to state 43
    precise_qualifier                   go to state 44
    type_qualifier                      go to state 45
    single_type_qualifier               go to state 46
    storage_qualifier                   go to state 47
    type_specifier                      go to state 48
    type_identifier                     go to state 49
    type_specifier_nonarray             go to state 50
    access_modifiers                    go to state 51
    struct_specifier                    go to state 52
    translation_unit                    go to state 53
    external_declaration                go to state 54
    function_definition                 go to state 55


State 4

   10 state_definition: CLASS $@1 . variable_identifier $@2 ':' state_variable ';'

    IDENTIFIER  shift, and go to state 56

    variable_identifier  go to state 57


State 5

    0 $accept: class_identifier $end .

    $default  accept


State 6

  174 type_identifier: TYPE .

    $default  reduce using rule 174 (type_identifier)


State 7

  179 struct_specifier: STRUCT . IDENTIFIER '{' struct_declaration_list '}'
  180                 | STRUCT . '{' struct_declaration_list '}'

    IDENTIFIER  shift, and go to state 58
    '{'         shift, and go to state 59


State 8

  149 storage_qualifier: CONST .

    $default  reduce using rule 149 (storage_qualifier)


State 9

  156 storage_qualifier: UNIFORM .

    $default  reduce using rule 156 (storage_qualifier)


State 10

  157 storage_qualifier: BUFFER .

    $default  reduce using rule 157 (storage_qualifier)


State 11

  158 storage_qualifier: SHARED .

    $default  reduce using rule 158 (storage_qualifier)


State 12

  159 storage_qualifier: COHERENT .

    $default  reduce using rule 159 (storage_qualifier)


State 13

  160 storage_qualifier: VOLATILE .

    $default  reduce using rule 160 (storage_qualifier)


State 14

  161 storage_qualifier: RESTRICT .

    $default  reduce using rule 161 (storage_qualifier)


State 15

  162 storage_qualifier: READONLY .

    $default  reduce using rule 162 (storage_qualifier)


State 16

  163 storage_qualifier: WRITEONLY .

    $default  reduce using rule 163 (storage_qualifier)


State 17

  135 layout_qualifier: LAYOUT . '(' layout_qualifier_id_list ')'

    '('  shift, and go to state 60


State 18

  153 storage_qualifier: CENTROID .

    $default  reduce using rule 153 (storage_qualifier)


State 19

  134 interpolation_qualifier: FLAT .

    $default  reduce using rule 134 (interpolation_qualifier)


State 20

  133 interpolation_qualifier: SMOOTH .

    $default  reduce using rule 133 (interpolation_qualifier)


State 21

  154 storage_qualifier: PATCH .

    $default  reduce using rule 154 (storage_qualifier)


State 22

  155 storage_qualifier: SAMPLE .

    $default  reduce using rule 155 (storage_qualifier)


State 23

  164 storage_qualifier: SUBROUTINE .
  165                  | SUBROUTINE . '(' type_name_list ')'

    '('  shift, and go to state 61

    $default  reduce using rule 164 (storage_qualifier)


State 24

  151 storage_qualifier: IN .

    $default  reduce using rule 151 (storage_qualifier)


State 25

  152 storage_qualifier: OUT .

    $default  reduce using rule 152 (storage_qualifier)


State 26

  150 storage_qualifier: INOUT .

    $default  reduce using rule 150 (storage_qualifier)


State 27

  132 invariant_qualifier: INVARIANT .

    $default  reduce using rule 132 (invariant_qualifier)


State 28

  140 precise_qualifier: PRECISE .

    $default  reduce using rule 140 (precise_qualifier)


State 29

   92 declaration: PRECISION . PRECISION type_specifier ';'

    PRECISION  shift, and go to state 62


State 30

  177 access_modifiers: PUBLIC .

    $default  reduce using rule 177 (access_modifiers)


State 31

  178 access_modifiers: PRIVATE .

    $default  reduce using rule 178 (access_modifiers)


State 32

  242 external_declaration: declaration .

    $default  reduce using rule 242 (external_declaration)


State 33

   90 declaration: function_prototype . '{' expression '}'
  243 function_definition: function_prototype . compound_statement_no_new_scope

    '{'  shift, and go to state 63

    compound_statement_no_new_scope  go to state 64


State 34

  101 function_prototype: function_declarator .

    $default  reduce using rule 101 (function_prototype)


State 35

  103 function_declarator: function_header_with_parameters .
  106 function_header_with_parameters: function_header_with_parameters . parameter_declaration

    TYPE        shift, and go to state 6
    STRUCT      shift, and go to state 7
    CONST       shift, and go to state 8
    UNIFORM     shift, and go to state 9
    BUFFER      shift, and go to state 10
    SHARED      shift, and go to state 11
    COHERENT    shift, and go to state 12
    VOLATILE    shift, and go to state 13
    RESTRICT    shift, and go to state 14
    READONLY    shift, and go to state 15
    WRITEONLY   shift, and go to state 16
    LAYOUT      shift, and go to state 17
    CENTROID    shift, and go to state 18
    FLAT        shift, and go to state 19
    SMOOTH      shift, and go to state 20
    PATCH       shift, and go to state 21
    SAMPLE      shift, and go to state 22
    SUBROUTINE  shift, and go to state 23
    IN          shift, and go to state 24
    OUT         shift, and go to state 25
    INOUT       shift, and go to state 26
    INVARIANT   shift, and go to state 27
    PRECISE     shift, and go to state 28
    PUBLIC      shift, and go to state 30
    PRIVATE     shift, and go to state 31

    $default  reduce using rule 103 (function_declarator)

    parameter_declarator      go to state 65
    parameter_declaration     go to state 66
    parameter_type_specifier  go to state 67
    invariant_qualifier       go to state 41
    interpolation_qualifier   go to state 42
    layout_qualifier          go to state 43
    precise_qualifier         go to state 44
    type_qualifier            go to state 68
    single_type_qualifier     go to state 46
    storage_qualifier         go to state 47
    type_specifier            go to state 69
    type_identifier           go to state 49
    type_specifier_nonarray   go to state 50
    access_modifiers          go to state 51
    struct_specifier          go to state 52


State 36

  104 function_declarator: function_header_with_no_parameters .

    $default  reduce using rule 104 (function_declarator)


State 37

  102 function_declarator: function_header .
  105 function_header_with_parameters: function_header . parameter_declaration
  107 function_header_with_no_parameters: function_header . ')'

    TYPE        shift, and go to state 6
    STRUCT      shift, and go to state 7
    CONST       shift, and go to state 8
    UNIFORM     shift, and go to state 9
    BUFFER      shift, and go to state 10
    SHARED      shift, and go to state 11
    COHERENT    shift, and go to state 12
    VOLATILE    shift, and go to state 13
    RESTRICT    shift, and go to state 14
    READONLY    shift, and go to state 15
    WRITEONLY   shift, and go to state 16
    LAYOUT      shift, and go to state 17
    CENTROID    shift, and go to state 18
    FLAT        shift, and go to state 19
    SMOOTH      shift, and go to state 20
    PATCH       shift, and go to state 21
    SAMPLE      shift, and go to state 22
    SUBROUTINE  shift, and go to state 23
    IN          shift, and go to state 24
    OUT         shift, and go to state 25
    INOUT       shift, and go to state 26
    INVARIANT   shift, and go to state 27
    PRECISE     shift, and go to state 28
    PUBLIC      shift, and go to state 30
    PRIVATE     shift, and go to state 31
    ')'         shift, and go to state 70

    $default  reduce using rule 102 (function_declarator)

    parameter_declarator      go to state 65
    parameter_declaration     go to state 71
    parameter_type_specifier  go to state 67
    invariant_qualifier       go to state 41
    interpolation_qualifier   go to state 42
    layout_qualifier          go to state 43
    precise_qualifier         go to state 44
    type_qualifier            go to state 68
    single_type_qualifier     go to state 46
    storage_qualifier         go to state 47
    type_specifier            go to state 69
    type_identifier           go to state 49
    type_specifier_nonarray   go to state 50
    access_modifiers          go to state 51
    struct_specifier          go to state 52


State 38

   91 declaration: init_declarator_list . ';'
  120 init_declarator_list: init_declarator_list . ',' IDENTIFIER
  121                     | init_declarator_list . ',' IDENTIFIER array_specifier
  122                     | init_declarator_list . ',' IDENTIFIER array_specifier '=' initializer
  123                     | init_declarator_list . ',' IDENTIFIER '=' initializer

    ';'  shift, and go to state 72
    ','  shift, and go to state 73


State 39

  119 init_declarator_list: single_declaration .

    $default  reduce using rule 119 (init_declarator_list)


State 40

  109 function_header: fully_specified_type . variable_identifier $@3 '('
  124 single_declaration: fully_specified_type .
  125                   | fully_specified_type . variable_identifier
  126                   | fully_specified_type . IDENTIFIER array_specifier
  127                   | fully_specified_type . IDENTIFIER array_specifier '=' initializer
  129                   | fully_specified_type . variable_identifier $@4 '=' initializer

    IDENTIFIER  shift, and go to state 74

    $default  reduce using rule 124 (single_declaration)

    variable_identifier  go to state 75


State 41

  146 single_type_qualifier: invariant_qualifier .

    $default  reduce using rule 146 (single_type_qualifier)


State 42

  145 single_type_qualifier: interpolation_qualifier .

    $default  reduce using rule 145 (single_type_qualifier)


State 43

  144 single_type_qualifier: layout_qualifier .

    $default  reduce using rule 144 (single_type_qualifier)


State 44

  147 single_type_qualifier: precise_qualifier .

    $default  reduce using rule 147 (single_type_qualifier)


State 45

   93 declaration: type_qualifier . IDENTIFIER '{' struct_declaration_list '}' ';'
   94            | type_qualifier . IDENTIFIER '{' struct_declaration_list '}' IDENTIFIER ';'
   95            | type_qualifier . IDENTIFIER '{' struct_declaration_list '}' IDENTIFIER array_specifier ';'
   96            | type_qualifier . ';'
   97            | type_qualifier . IDENTIFIER ';'
   98            | type_qualifier . IDENTIFIER identifier_list ';'
  131 fully_specified_type: type_qualifier . type_specifier
  142 type_qualifier: type_qualifier . single_type_qualifier

    TYPE        shift, and go to state 6
    IDENTIFIER  shift, and go to state 76
    STRUCT      shift, and go to state 7
    CONST       shift, and go to state 8
    UNIFORM     shift, and go to state 9
    BUFFER      shift, and go to state 10
    SHARED      shift, and go to state 11
    COHERENT    shift, and go to state 12
    VOLATILE    shift, and go to state 13
    RESTRICT    shift, and go to state 14
    READONLY    shift, and go to state 15
    WRITEONLY   shift, and go to state 16
    LAYOUT      shift, and go to state 17
    CENTROID    shift, and go to state 18
    FLAT        shift, and go to state 19
    SMOOTH      shift, and go to state 20
    PATCH       shift, and go to state 21
    SAMPLE      shift, and go to state 22
    SUBROUTINE  shift, and go to state 23
    IN          shift, and go to state 24
    OUT         shift, and go to state 25
    INOUT       shift, and go to state 26
    INVARIANT   shift, and go to state 27
    PRECISE     shift, and go to state 28
    PUBLIC      shift, and go to state 30
    PRIVATE     shift, and go to state 31
    ';'         shift, and go to state 77

    invariant_qualifier      go to state 41
    interpolation_qualifier  go to state 42
    layout_qualifier         go to state 43
    precise_qualifier        go to state 44
    single_type_qualifier    go to state 78
    storage_qualifier        go to state 47
    type_specifier           go to state 79
    type_identifier          go to state 49
    type_specifier_nonarray  go to state 50
    access_modifiers         go to state 51
    struct_specifier         go to state 52


State 46

  141 type_qualifier: single_type_qualifier .

    $default  reduce using rule 141 (type_qualifier)


State 47

  143 single_type_qualifier: storage_qualifier .

    $default  reduce using rule 143 (single_type_qualifier)


State 48

  130 fully_specified_type: type_specifier .

    $default  reduce using rule 130 (fully_specified_type)


State 49

  176 type_specifier_nonarray: type_identifier .

    $default  reduce using rule 176 (type_specifier_nonarray)


State 50

  168 type_specifier: type_specifier_nonarray .
  169               | type_specifier_nonarray . array_specifier

    '['  shift, and go to state 80

    $default  reduce using rule 168 (type_specifier)

    array_specifier  go to state 81


State 51

  148 single_type_qualifier: access_modifiers .

    $default  reduce using rule 148 (single_type_qualifier)


State 52

  175 type_specifier_nonarray: struct_specifier .

    $default  reduce using rule 175 (type_specifier_nonarray)


State 53
